storage id sort complete

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="icon"><i class="fas fa-sync"></i></div>
 </section>
 <section class="item">
-    <input type="text" placeholder="Add New Task........" class="NewItem" id="NewItem">  
+<input type="text" placeholder="Add New Task........" class="NewItem" id="NewItem" >  
 </section>
 </header>
 <section class="DisplayItems">
@@ -27,6 +27,6 @@
 </section>
 
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
